2005-10-28  Keith Packard  <keithp@keithp.com>

	* src/cairo-pattern.c: (_cairo_pattern_get_extents):
	* src/cairo-surface.c: (_fallback_mask):
	* src/cairoint.h:
	Bound mask fallback operation by transformed mask and
	source. This should speed up any applications calling
	cairo_mask with a bounded source or mask operand.

2005-10-28  Keith Packard  <keithp@keithp.com>

	* src/cairo-gstate.c: (_cairo_operator_bounded_by_mask),
	(_cairo_operator_bounded_by_source),
	(_cairo_gstate_clip_and_composite),
	(_cairo_surface_clip_and_composite_trapezoids),
	(_cairo_gstate_show_glyphs):
	* src/cairo-image-surface.c: (_cairo_image_surface_composite),
	(_cairo_image_surface_composite_trapezoids):
	* src/cairo-xlib-surface.c: (_cairo_xlib_surface_composite),
	(_cairo_xlib_surface_composite_trapezoids),
	(_cairo_xlib_surface_show_glyphs):
	* src/cairoint.h:
	Split _cairo_operator_bounded into two
	separate functions _cairo_operator_bounded_by_mask and
	_cairo_operator_bound_by_source to distinguish between
	how operators use source and mask operands.

2005-10-27  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_paint):
	Fix leak of pattern (missing _cairo_pattern_fini).

	* src/cairoint.h:
	* src/cairo-gstate.c: (_cairo_gstate_paint),	
	(_cairo_gstate_clip_and_composite), (_cairo_gstate_mask):
	* src/cairo-pattern.c:
	* src/cairo-surface.c: (_cairo_surface_mask_draw_func),
	(_fallback_mask), (_cairo_surface_mask):
	Move mask fallback from gstate to surface where it belongs.

	* src/cairoint.h: Temporarily export some previously private
	cairo_gstate functions, (soon to become private cairo_fallback
	functions).

2005-10-27  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-gstate.c: (_cairo_gstate_paint):
	* src/cairo-surface.c: (_fallback_paint), (_cairo_surface_paint):
	Move paint fallback from gstate to surface where it belongs.

	* src/cairoint.h:
	* src/cairo-surface.c: (_cairo_surface_init), (_cairo_surface_set_clip):